--- a/app/views/layouts/barbeque/job_definitions.html.haml
+++ b/app/views/layouts/barbeque/job_definitions.html.haml
@@ -3,4 +3,4 @@
     .fa.fa-tasks
     Job Definitions
 
-= render template: 'layouts/application'
+= render template: 'layouts/barbeque/application'
