Move assets to barbeque namespace

--- a/app/assets/stylesheets/barbeque/application.scss
+++ b/app/assets/stylesheets/barbeque/application.scss
@@ -3,5 +3,5 @@
 @import "AdminLTE/AdminLTE";
 @import "AdminLTE/skins/skin-blue";
 
-@import "common";
-@import "job_definitions";
+@import "barbeque/common";
+@import "barbeque/job_definitions";
