Show execution statistics

--- a/app/views/barbeque/job_definitions/show.html.haml
+++ b/app/views/barbeque/job_definitions/show.html.haml
@@ -42,6 +42,11 @@
 
       .box-body
         - if @job_executions.present?
+          .row
+            .col-xs-2
+              = link_to(job_definition_stats_path(@job_definition), class: 'btn btn-default btn-block') do
+                %i.fa.fa-line-chart
+                Statistics
           %table.table.table-bordered
             %thead
               %tr
