--- a/app/views/barbeque/job_retries/show.html.haml
+++ b/app/views/barbeque/job_retries/show.html.haml
@@ -49,7 +49,7 @@
 
       .box-body
         - if @retry_log
-          %pre= @retry_log['stdout']
+          %pre= rinku_auto_link(@retry_log['stdout'])
         - else
           Retry log was not found.
 
@@ -61,7 +61,7 @@
 
       .box-body
         - if @retry_log
-          %pre= @retry_log['stderr']
+          %pre= rinku_auto_link(@retry_log['stderr'])
         - else
           Retry log was not found.
 
