--- a/app/views/barbeque/sns_subscriptions/_form.html.haml
+++ b/app/views/barbeque/sns_subscriptions/_form.html.haml
@@ -15,7 +15,7 @@
         .col-md-8
           = f.label :topic_arn
           - if @sns_subscription.persisted?
-            .sns_subscriptio_topic_arn= @sns_subscription.topic_arn
+            .sns_subscription_topic_arn= @sns_subscription.topic_arn
           - else
             = f.collection_select :topic_arn, @sns_topic_arns.map {|t| [t] }, :first, :first,
               { prompt: true }, class: 'form-control'
@@ -23,8 +23,11 @@
       .row.form-group
         .col-md-4
           = f.label :job_queue_id
-          = f.collection_select :job_queue_id, Barbeque::JobQueue.pluck(:id, :name), :first, :second,
-            { prompt: true }, class: 'form-control'
+          - if @sns_subscription.persisted?
+            .sns_subscription_job_queue_id= link_to @sns_subscription.job_queue.name, @sns_subscription.job_queue
+          - else
+            = f.collection_select :job_queue_id, Barbeque::JobQueue.pluck(:id, :name), :first, :second,
+              { prompt: true }, class: 'form-control'
 
       .row.form-group
         .col-md-4
