--- a/app/views/barbeque/job_executions/show.html.haml
+++ b/app/views/barbeque/job_executions/show.html.haml
@@ -8,7 +8,7 @@
               \##{@job_execution.id} of
               = link_to @job_execution.job_definition do
                 #{@job_execution.job_definition.job}
-          - if @job_execution.failed?
+          - if @job_execution.retryable?
             .col-md-2
               = link_to job_execution_retry_path(@job_execution), method: :post, class: 'btn btn-default btn-block pull-right',
                 data: { disable_with: 'retrying...', confirm: "Are you sure to retry #{@job_execution.job_definition.job} ##{@job_execution.id}?" } do
