rinku_auto_link doesn't work with Rails 5.1
https://github.com/vmg/rinku/issues/70

--- a/app/views/barbeque/job_executions/show.html.haml
+++ b/app/views/barbeque/job_executions/show.html.haml
@@ -82,7 +82,7 @@
 
       .box-body
         - if @log
-          %pre= rinku_auto_link(@log['stdout'])
+          %pre= Rinku.auto_link(html_escape(@log['stdout'])).html_safe
         - else
           Log was not found.
 
@@ -94,7 +94,7 @@
 
       .box-body
         - if @log
-          %pre= rinku_auto_link(@log['stderr'])
+          %pre= Rinku.auto_link(html_escape(@log['stderr'])).html_safe
         - else
           Log was not found.
 
