Set descriptive title element

--- a/app/views/barbeque/job_retries/show.html.haml
+++ b/app/views/barbeque/job_retries/show.html.haml
@@ -1,3 +1,5 @@
+- content_for(:title, "Job retry ##{@job_retry.id} of #{@job_retry.job_execution.job_definition.job} - Barbeque")
+
 .row
   .col-sm-12
     .box.box-primary
