--- a/app/views/barbeque/job_definitions/edit.html.haml
+++ b/app/views/barbeque/job_definitions/edit.html.haml
@@ -1,3 +1,5 @@
+- content_for(:title, "Edit job definition #{@job_definition.job} - Barbeque")
+
 = render 'form'
 
 = link_to 'Back', job_definition_path(@job_definition)
