--- a/app/views/barbeque/sns_subscriptions/show.html.haml
+++ b/app/views/barbeque/sns_subscriptions/show.html.haml
@@ -1,3 +1,5 @@
+- content_for(:title, "SNS subscription between #{@sns_subscription.topic_arn} and #{@sns_subscription.job_queue.name} - Barbeque")
+
 .row
   .col-sm-7
     .box.box-primary
