--- a/app/views/layouts/barbeque/application.html.haml
+++ b/app/views/layouts/barbeque/application.html.haml
@@ -3,7 +3,7 @@
   %head
     %meta{ content: 'text/html; charset=UTF-8', 'http-equiv': 'Content-Type' }
     %meta{ charset: 'UTF-8' }
-    %title Barbeque
+    %title= content_for(:title)
     %meta{ content: 'width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no', name: 'viewport' }
     -# FIXME: Don't rely on others' CDN
     %link{ href: 'https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css', rel: 'stylesheet', type: 'text/css' }
