--- a/app/views/barbeque/apps/index.html.haml
+++ b/app/views/barbeque/apps/index.html.haml
@@ -1,4 +1,7 @@
 - content_for(:title, 'Barbeque')
+- content_for(:header) do
+  %ol.breadcrumb
+    %li.active Home
 
 .box.box-primary
   .box-header
