--- a/app/views/barbeque/apps/show.html.haml
+++ b/app/views/barbeque/apps/show.html.haml
@@ -1,4 +1,8 @@
 - content_for(:title, "#{@app.name} - Barbeque")
+- content_for(:header) do
+  %ol.breadcrumb
+    %li= link_to('Home', root_path)
+    %li.active #{@app.name}
 
 .box.box-primary
   .box-header
