--- a/app/views/barbeque/job_retries/show.html.haml
+++ b/app/views/barbeque/job_retries/show.html.haml
@@ -1,4 +1,13 @@
 - content_for(:title, "Job retry ##{@job_retry.id} of #{@job_retry.job_execution.job_definition.job} - Barbeque")
+- content_for(:header) do
+  %ol.breadcrumb
+    - job_execution = @job_retry.job_execution
+    - job_definition = job_execution.job_definition
+    %li= link_to('Home', root_path)
+    %li= link_to(job_definition.app.name, app_path(job_definition.app.id))
+    %li= link_to(job_definition.job, job_definition_path(job_definition.id))
+    %li= link_to("##{job_execution.id}", job_execution_path(job_execution.id))
+    %li.active ##{@job_retry.id}
 
 .row
   .col-sm-12
