--- a/app/views/barbeque/job_queues/new.html.haml
+++ b/app/views/barbeque/job_queues/new.html.haml
@@ -1,4 +1,8 @@
 - content_for(:title, 'New job queue - Barbeque')
+- content_for(:header) do
+  %ol.breadcrumb
+    %li= link_to('Home', root_path)
+    %li= link_to('Job queues', job_queues_path)
 
 = render 'form'
 
