Show job_definition link only if job_definition[app_id] is present

--- a/app/views/barbeque/job_definitions/new.html.haml
+++ b/app/views/barbeque/job_definitions/new.html.haml
@@ -2,7 +2,8 @@
 - content_for(:header) do
   %ol.breadcrumb
     %li= link_to('Home', root_path)
-    %li= link_to(@job_definition.app.name, app_path(@job_definition.app.id))
+    - if @job_definition.app
+      %li= link_to(@job_definition.app.name, app_path(@job_definition.app.id))
 
 = render 'form'
 
