Do not truncate hover labels

--- a/app/views/barbeque/monitors/index.html.haml
+++ b/app/views/barbeque/monitors/index.html.haml
@@ -52,5 +52,8 @@
       name: name,
       x: x,
       y: y,
+      hoverlabel: {
+        namelength: -1,
+      }
     })
   Plotly.plot(chartDiv, plotlyArgs)
