--- a/app/views/barbeque/job_queues/show.html.haml
+++ b/app/views/barbeque/job_queues/show.html.haml
@@ -26,4 +26,13 @@
     = link_to 'Destroy', job_queue_path(@job_queue),
       class: 'btn', method: :delete, data: { confirm: 'Are you sure to delete queue?' }
 
+.box
+  .box-header
+    %h3.box-title.with_padding
+      SQS attributes
+  .box-body
+    #sqs-attributes{data: {url: sqs_attributes_job_queue_url(@job_queue.id)}}
+      %i.loading-indicator.fa.fa-spinner.fa-spin
+    #sqs-dlq-attributes
+
 = link_to 'Back', job_queues_path
