Add server-side retry feature
Barbeque already has client-side retry feature
(BarbequeClient::Retryable), but when the job execution
(`rails barbeque:execute`) is interrupted before reaching the ActiveJob
codebase, Barbeque::Retryable cannot work. So I'd like to add
server-side retry feature.

--- a/app/assets/stylesheets/barbeque/job_definitions.scss
+++ b/app/assets/stylesheets/barbeque/job_definitions.scss
@@ -18,4 +18,24 @@
       display: block;
     }
   }
+
+  .retry_configuration_wrapper label {
+    font-weight: normal;
+  }
+
+  .enable_retry_configuration {
+    margin: 0 2px 0 8px;
+  }
+
+  .retry_configuration_field {
+    display: none;
+
+    label {
+      font-weight: normal;
+    }
+
+    &.active {
+      display: block;
+    }
+  }
 }
