Wrap JSON message in pre tag for large message
Before: https://gyazo.wanko.cc/d084babe41a4f04e6fe76871636e7f18
After: https://gyazo.wanko.cc/269fa322c2be6e98793681a36d2388cc

--- a/app/views/barbeque/job_executions/show.html.haml
+++ b/app/views/barbeque/job_executions/show.html.haml
@@ -47,7 +47,8 @@
               %th Message
               %td
                 - if @log
-                  %code= @log['message']
+                  %pre
+                    %code= @log['message']
                 - else
                   Log was not found.
   .col-sm-5
