--- a/app/assets/stylesheets/barbeque/application.scss
+++ b/app/assets/stylesheets/barbeque/application.scss
@@ -1,7 +1,6 @@
-@import "bootstrap-sprockets";
 @import "bootstrap";
-@import "AdminLTE/AdminLTE";
-@import "AdminLTE/skins/skin-blue";
+@import "AdminLTE";
+@import "skins/skin-blue";
 
 @import "barbeque/common";
 @import "barbeque/job_definitions";
