--- a/app/views/layouts/barbeque/application.html.haml
+++ b/app/views/layouts/barbeque/application.html.haml
@@ -8,6 +8,10 @@
     -# FIXME: Don't rely on others' CDN
     %link{ href: 'https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css', rel: 'stylesheet', type: 'text/css' }
     %link{ href: 'https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css', rel: 'stylesheet', type: 'text/css' }
+
+    -# https://github.com/ColorlibHQ/AdminLTE/commit/235481d1d6324c1d4257f86c621700aa7f4a0b7f
+    %link{ href: 'https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic', rel: 'stylesheet', type: 'text/css' }
+
     = stylesheet_link_tag    'barbeque/application', media: 'all'
     = javascript_include_tag 'barbeque/application'
     = csrf_meta_tags
